testsuite/tests/parser/should_fail/patFail001.hs
module PatFail001 where

f (\x -> a) = _
