testsuite/tests/parser/should_fail/patFail001.stderr

patFail001.hs:3:4: error: [GHC-00482]
    Lambda-syntax in pattern.
    Pattern matching on functions is not possible.
